# hvac-agents

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
common/: pyproject.toml
common/common/: auth.py  config.py  db.py  metrics.py  tenant.py  tenant_middleware.py
common/common/schemas/: equipment.py  plant.py
common/tests/: test_tenant.py
hvac-edge/: pyproject.toml
hvac-edge/deploy/: edge_config.yaml  install.sh  requirements-bare.txt
hvac-edge/deploy/systemd/: hvac-edge.service
hvac-edge/edge/: config.py  db.py  main.py
hvac-edge/edge/engine/: collector.py  controller.py  inspector.py
hvac-edge/edge/ml/: runtime.py
hvac-edge/edge/sync/: agent.py  queue.py
hvac-edge/edge/templates/: default_inspection.yaml
hvac-edge/tests/: test_collector.py  test_controller.py  test_db.py  test_inspector.py  test_ml_runtime.py  test_sync.py
services/acquisition/: Dockerfile  pyproject.toml
services/acquisition/acquisition_service/: cache.py  edge_sync.py  forwarder.py  gap_filler.py  main.py  models.py  poller.py
services/acquisition/acquisition_service/adapters/: bacnet_adapter.py  base.py  modbus_adapter.py  opcua_adapter.py
services/acquisition/acquisition_service/api/: commands.py  points.py  status.py
services/acquisition/alembic/: env.py
services/acquisition/tests/: test_bacnet_adapter.py  test_edge_sync.py  test_gap_filler.py  test_modbus_adapter.py  test_opcua_adapter.py  test_poller.py
services/agent/: Dockerfile  pyproject.toml
services/agent/agent_service/: alarm_compliance.py  alarm_manager.py  alarm_models.py  calibration_engine.py  calibration_models.py  carbon_models.py  carbon_repositories.py  main.py  models.py  repositories.py
services/agent/agent_service/agents/: base.py  coordinator.py  monitor.py  parameter.py  predict.py  report.py  safety.py  strategy.py
services/agent/agent_service/alerting/: delivery.py  engine.py  escalation.py  rule_models.py  rules.yaml  suppression.py
services/agent/agent_service/anomaly/: autoencoder.py  cold_start.py  feature_builder.py  isolation_forest.py
services/agent/agent_service/api/: alarms_isa.py  alerts.py  benchmarking.py  calibration.py  carbon.py  dispatch.py  monitoring.py  override.py  prediction.py  reports.py  rl.py  strategies.py
services/agent/agent_service/benchmarking/: engine.py
services/agent/agent_service/carbon/: carbon_market.py  carbon_optimizer.py  cea_adapter.py  emission_calculator.py
services/agent/agent_service/control/: deadband.py  pid.py
services/agent/agent_service/energy/: baseline_engine.py  demand_predictor.py  mv_verifier.py  scheduler.py
services/agent/agent_service/graph/: conditional_logic.py  debate.py  setup.py
services/agent/agent_service/health/: closed_loop.py  fault_diagnoser.py  fft_analyzer.py  health_scorer.py  rul_estimator.py
services/agent/agent_service/messaging/: bus.py
services/agent/agent_service/optimization/: constraints.py  network_flow.py  objective.py  pareto.py  solver.py  station_dispatch.py
services/agent/agent_service/prediction/: blender.py  data_fetcher.py  ml_model.py  physics_model.py
services/agent/agent_service/predictive_maintenance/: degradation_tracker.py  failure_predictor.py  maintenance_scheduler.py  models.py  rule_advisor.py
services/agent/agent_service/rag/: retriever.py
services/agent/agent_service/reports/: kpi_calculator.py  renderer.py
services/agent/alembic/: env.py
services/agent/tests/: test_alarm_compliance.py  test_alarm_manager.py  test_anomaly_ml.py  test_calibration_engine.py  test_degradation_tracker.py  test_dispatch_carbon.py  test_energy_engines.py  test_failure_predictor.py  test_health_engines.py  test_maintenance_api.py  test_multi_agent.py  test_training_benchmark.py  test_workorder.py  test_workorder_api.py
services/edgemanager/: Dockerfile  mosquitto.conf  pyproject.toml
services/edgemanager/edgemanager_service/: main.py  models.py  mqtt_client.py
services/edgemanager/tests/: conftest.py  test_config.py  test_data.py  test_heartbeat.py  test_ota.py  test_registry.py
services/energy/: Dockerfile  pyproject.toml
services/energy/energy_service/: excel_generator.py  main.py  models.py
services/energy/tests/: test_api.py  test_excel.py  test_models.py
services/health/: Dockerfile  pyproject.toml
services/health/health_service/: excel_generator.py  main.py  models.py
services/health/tests/: test_api.py  test_excel.py  test_models.py
(+402 files in other folders)
