[project]
name = "hvac-agents"
version = "0.1.0"
description = "HVAC Chiller Plant Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis>=5.0",
    "celery>=5.4",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "weasyprint>=62",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
hvac = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "alembic>=1.13",
    "asyncpg>=0.29",
]
