[project]
name = "hvac-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
