[project]
name = "hvac-edge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiomqtt>=2.0",
    "httpx>=0.28",
    "onnxruntime>=1.19",
    "pymodbus>=3.7",
    "BAC0>=23.0",
    "asyncua>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.20.0",
]
