[project]
name = "acquisition-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hvac-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "redis>=5.0",
    "pymodbus>=3.7",
    "BAC0>=23.0",
    "asyncua>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
]

[tool.uv.sources]
hvac-common = { workspace = true }
