[project]
name = "edgemanager-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hvac-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "aiomqtt>=2.0",
]

[tool.uv.sources]
hvac-common = { workspace = true }
