[project]
name = "energy-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hvac-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "httpx>=0.28",
    "aiosqlite>=0.21",
]

[tool.uv.sources]
hvac-common = { workspace = true }
